# whisper

./: .env  .flake8  .gitignore  Jenkinsfile  README.md  prestart.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 088a617aceac_create_db_and_tables.py
app/: initial_data.py  main.py  utils.py
app/adapters/: orm.py  repository.py  song_repository.py
app/adapters/station/: repository.py
app/adapters/station/test/: test_in_memory_repository.py
app/adapters/test/: test_sqlalchemy_user_repository.py
app/adapters/user/: repository.py
app/adapters/user/test/: test_sqlalchemy_user_repository.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: items.py  login.py  song.py  station.py  users.py  utils.py
app/core/: config.py  exceptions.py  security.py
app/crud/: __init__.py  base.py  crud_user.py
app/crud/test/: test_base.py  test_crud_item.py  test_crud_user.py
app/db/: init_db.py
app/models/: domain_model.py  item.py  user.py
app/models/tests/: test_domain_model.py
app/schemas/: __init__.py  station.py  user.py
app/services/: song_services.py  song_uow.py  station_services.py  station_uow.py  user_services.py  user_uow.py
app/services/test/: test_station_service.py  test_user_services.py
app/tests/: conftest.py  test_env.fish  test_env.sh
app/tests/api/api_v1/: test_celery.py  test_items.py  test_login.py  test_users.py
app/tests/crud/: test_item.py  test_user.py
app/tests/e2e/: test_music_stream.py
app/tests/utils/: item.py  user.py  utils.py
deploy/kubernetes/: db_deployment.yaml  db_ingress.yaml  db_service.yaml  deployment.yaml  ingress.yaml  service.yaml  volume.yaml
scripts/: lint.sh
