[tool.poetry]
name = "backend-boilerplate"
version = "0.1.0"
description = "None"
authors = ["Admin <admin@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.4"
fastapi = "^0.73.0"
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.27.1"
celery = "^5.2.3"
passlib = "^1.7.4"
tenacity = "^8.0.1"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
Jinja2 = "^3.0.3"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.31"
python-jose = "^3.3.0"
bcrypt = "^3.2.0"
mock = "^4.0.3"
PyMySQL = "^1.0.2"
alembic = "^1.7.6"
types-mock = "^4.0.10"
sqlalchemy2-stubs = "^0.0.2-alpha.20"
python-shout = "^0.2.7"
python-vlc = "^3.0.16120"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.0.1"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 79

[tool.black]
line-length = 79
target-version = ['py39']

[tool.pylint.'MESSAGES CONTROL']
disable = ["E0611"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
  "unit: unit tests for commit stage",
  "component: component tests that depend on services extenral to the python app but still in our codebase and deployment",
  "celery: tests that require celery to be up and running"
]

[tool.mypy]
python_version = "3.9"
